syntax = "proto3";

package profiles;

service ProfileService {
    rpc Login(Credentials) returns (UserData);
    rpc Signup(UserData) returns (UserData);
    rpc UpdateProfile(UserData) returns (UserData);
    rpc UsernameExists(UsernameRequest) returns (ExistsResponse);
}

message UsernameRequest {
    string username = 1;
}

message ExistsResponse {
    bool exists = 1;
}

message Credentials {
    string username = 1;
    string password = 2;
}

message UserData {
    string username = 1;
    string password = 2;
    string name = 3;
    int32 heightInCm = 4;
    enum Gender {
        MALE = 0;
        FEMALE = 1;
    }
    string dob = 5;
    bytes profile_img = 6;
}